@@ -1,5 +1,7 @@
 package de.adEditor;
 
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.w3c.dom.Document;
 import org.w3c.dom.Element;
 import org.w3c.dom.Node;
@@ -20,14 +22,15 @@ import java.awt.*;
 import java.awt.image.BufferedImage;
 import java.io.File;
 import java.io.IOException;
-import java.io.UnsupportedEncodingException;
 import java.net.URL;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.LinkedList;
 import java.util.Map;
 import java.util.TreeMap;
 
 public class AutoDriveEditor extends JFrame {
+    public static final int EDITORSTATE_NOOP = -1;
     public static final int EDITORSTATE_MOVING = 0;
     public static final int EDITORSTATE_DELETING = 1;
     public static final int EDITORSTATE_CONNECTING = 2;
@@ -41,38 +44,31 @@ public class AutoDriveEditor extends JFrame {
     public static final String CREATE_NODES = "Create Nodes";
     public static final String CREATE_DESTINATIONS = "Create Destinations";
 
+    private MapPanel mapPanel;
+    private JButton saveButton;
+    private JButton loadImageButton;
+    private JToggleButton removeNode;
+    private JToggleButton removeDestination;
+    private JToggleButton moveNode;
+    private JToggleButton connectNodes;
+    private JToggleButton createNode;
+    private JToggleButton createDestination;
+    private JRadioButton oneTimesMap;
+    private JRadioButton fourTimesMap;
+    private JRadioButton sixteenTimesMap;
 
-    public MapPanel mapPanel;
-    public JPanel buttonPanel;
-    public JButton saveButton;
-    public JButton loadRoadMapButton;
-    public JButton loadImageButton;
-    public JToggleButton removeNode;
-    public JToggleButton removeDestination;
-    public JToggleButton moveNode;
-    public JToggleButton connectNodes;
-    public JToggleButton createNode;
-    public JToggleButton createDestination;
-    public JToggleButton fourTimesMap;
-    public JToggleButton sixteenTimesMap;
-
-    public MapNode selected = null;
-
-    public boolean isFourTimesMap = false;
-    public boolean isSixteenTimesMap = false;
-
-    public int editorState = EDITORSTATE_MOVING;
-
-    public EditorListener editorListener;
-
-    public MouseListener mouseListener;
-
+    public int editorState = EDITORSTATE_NOOP;
     public File loadedFile, savedFile;
+
+    private static Logger LOG = LoggerFactory.getLogger(AutoDriveEditor.class);
+
 
     public AutoDriveEditor() {
         super("AutoDrive Course Editor 0.1");
 
-        this.setLayout(new BorderLayout());
+        LOG.info("AutoDrive start.............................................................................................");
+        setTractorIcon();
+        setLayout(new BorderLayout());
 
         // create a new panel with GridBagLayout manager
         mapPanel = new MapPanel(this);
@@ -84,80 +80,126 @@ public class AutoDriveEditor extends JFrame {
         // add the panel to this frame
         add(mapPanel, BorderLayout.CENTER);
 
-        this.editorListener = new EditorListener(this);
+        EditorListener editorListener = new EditorListener(this);
 
-        buttonPanel = new JPanel(new FlowLayout());
+        JPanel buttonPanel = new JPanel(new FlowLayout());
 
-        loadRoadMapButton = new JButton("Load Config");
-        loadRoadMapButton.addActionListener(this.editorListener);
+        JPanel configBox = new JPanel();
+        configBox.setBorder(BorderFactory.createTitledBorder("Config"));
+        buttonPanel.add(configBox);
+
+        JButton loadRoadMapButton = new JButton("Load");
+        loadRoadMapButton.addActionListener(editorListener);
         loadRoadMapButton.setActionCommand("Load");
-        buttonPanel.add(loadRoadMapButton);
-
-        loadImageButton = new JButton("Load Map");
-        loadImageButton.addActionListener(this.editorListener);
-        loadImageButton.setActionCommand("Load Image");
-        buttonPanel.add(loadImageButton);
-
-        moveNode = new JToggleButton("Move Nodes");
-        moveNode.addActionListener(this.editorListener);
-        moveNode.setActionCommand(MOVE_NODES);
-        buttonPanel.add(moveNode);
-
-        connectNodes = new JToggleButton("Connect Nodes");
-        connectNodes.addActionListener(this.editorListener);
-        connectNodes.setActionCommand(CONNECT_NODES);
-        connectNodes.setName(CONNECT_NODES);
-        buttonPanel.add(connectNodes);
-
-        removeNode = new JToggleButton("Delete Nodes");
-        removeNode.addActionListener(this.editorListener);
-        removeNode.setActionCommand(REMOVE_NODES);
-        buttonPanel.add(removeNode);
-
-        removeDestination = new JToggleButton("Delete Destination");
-        removeDestination.addActionListener(this.editorListener);
-        removeDestination.setActionCommand(REMOVE_DESTINATIONS);
-        buttonPanel.add(removeDestination);
-
-        createNode = new JToggleButton("Create Node");
-        createNode.addActionListener(this.editorListener);
-        createNode.setActionCommand(CREATE_NODES);
-        buttonPanel.add(createNode);
-
-        createDestination = new JToggleButton("Create Destination");
-        createDestination.addActionListener(this.editorListener);
-        createDestination.setActionCommand(CREATE_DESTINATIONS);
-        buttonPanel.add(createDestination);
-
-        fourTimesMap = new JToggleButton(" 4x");
-        fourTimesMap.addActionListener(this.editorListener);
-        fourTimesMap.setActionCommand("FourTimesMap");
-        buttonPanel.add(fourTimesMap);
-
-        sixteenTimesMap = new JToggleButton(" 16x");
-        sixteenTimesMap.addActionListener(this.editorListener);
-        sixteenTimesMap.setActionCommand("SixteenTimesMap");
-        buttonPanel.add(sixteenTimesMap);
+        configBox.add(loadRoadMapButton);
 
         saveButton = new JButton("Save");
-        saveButton.addActionListener(this.editorListener);
+        saveButton.addActionListener(editorListener);
         saveButton.setActionCommand("Save");
-        buttonPanel.add(saveButton);
+        saveButton.setEnabled(false);
+        configBox.add(saveButton);
+
+        JPanel mapBox = new JPanel();
+        mapBox.setBorder(BorderFactory.createTitledBorder("Map and zoom factor"));
+        buttonPanel.add(mapBox);
+
+        loadImageButton = new JButton("Load Map");
+        loadImageButton.addActionListener(editorListener);
+        loadImageButton.setActionCommand("Load Image");
+        mapBox.add(loadImageButton);
+
+        ButtonGroup zoomGroup = new ButtonGroup();
+        oneTimesMap = new JRadioButton(" 1x");
+        oneTimesMap.addActionListener(editorListener);
+        oneTimesMap.setActionCommand("OneTimesMap");
+        oneTimesMap.setSelected(true);
+        mapBox.add(oneTimesMap);
+        zoomGroup.add(oneTimesMap);
+
+        fourTimesMap = new JRadioButton(" 4x");
+        fourTimesMap.addActionListener(editorListener);
+        fourTimesMap.setActionCommand("FourTimesMap");
+        mapBox.add(fourTimesMap);
+        zoomGroup.add(fourTimesMap);
+
+        sixteenTimesMap = new JRadioButton(" 16x");
+        sixteenTimesMap.addActionListener(editorListener);
+        sixteenTimesMap.setActionCommand("SixteenTimesMap");
+        mapBox.add(sixteenTimesMap);
+        zoomGroup.add(sixteenTimesMap);
+
+        JPanel nodeBox = new JPanel();
+        nodeBox.setBorder(BorderFactory.createTitledBorder("Nodes"));
+        buttonPanel.add(nodeBox);
+
+        moveNode = new JToggleButton("Move Nodes");
+        moveNode.addActionListener(editorListener);
+        moveNode.setActionCommand(MOVE_NODES);
+        nodeBox.add(moveNode);
+
+        connectNodes = new JToggleButton("Connect Nodes");
+        connectNodes.addActionListener(editorListener);
+        connectNodes.setActionCommand(CONNECT_NODES);
+        connectNodes.setName(CONNECT_NODES);
+        nodeBox.add(connectNodes);
+
+        removeNode = new JToggleButton("Delete Nodes");
+        removeNode.addActionListener(editorListener);
+        removeNode.setActionCommand(REMOVE_NODES);
+        nodeBox.add(removeNode);
+
+        removeDestination = new JToggleButton("Delete Destination");
+        removeDestination.addActionListener(editorListener);
+        removeDestination.setActionCommand(REMOVE_DESTINATIONS);
+        nodeBox.add(removeDestination);
+
+        createNode = new JToggleButton("Create Node");
+        createNode.addActionListener(editorListener);
+        createNode.setActionCommand(CREATE_NODES);
+        nodeBox.add(createNode);
+
+        createDestination = new JToggleButton("Create Destination");
+        createDestination.addActionListener(editorListener);
+        createDestination.setActionCommand(CREATE_DESTINATIONS);
+        nodeBox.add(createDestination);
 
         updateButtons();
+        nodeBoxSetEnabled(false);
+        mapBoxSetEnabled(false);
 
         this.add(buttonPanel, BorderLayout.NORTH);
-
-
-        this.mouseListener = new MouseListener(mapPanel);
-
-        mapPanel.addMouseListener(mouseListener);
-        mapPanel.addMouseMotionListener(mouseListener);
-        mapPanel.addMouseWheelListener(mouseListener);
 
         pack();
         setLocationRelativeTo(null);
         this.setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
+    }
+
+    private void setTractorIcon() {
+        try {
+            URL url = AutoDriveEditor.class.getResource("/tractor.png");
+            if (url != null) {
+                BufferedImage tractorImage = ImageIO.read(url);
+                setIconImage(tractorImage);
+            }
+        } catch (IOException e) {
+            LOG.error(e.getMessage(), e);
+        }
+    }
+
+    private void nodeBoxSetEnabled(boolean enabled) {
+        moveNode.setEnabled(enabled);
+        connectNodes.setEnabled(enabled);
+        removeNode.setEnabled(enabled);
+        removeDestination.setEnabled(enabled);
+        createNode.setEnabled(enabled);
+        createDestination.setEnabled(enabled);
+    }
+
+    private void mapBoxSetEnabled(boolean enabled) {
+        loadImageButton.setEnabled(enabled);
+        oneTimesMap.setEnabled(enabled);
+        fourTimesMap.setEnabled(enabled);
+        sixteenTimesMap.setEnabled(enabled);
     }
 
     public void updateButtons() {
@@ -195,25 +237,26 @@ public class AutoDriveEditor extends JFrame {
         try {
             UIManager.setLookAndFeel(UIManager.getSystemLookAndFeelClassName());
         } catch (Exception ex) {
-            ex.printStackTrace();
+            LOG.error(ex.getMessage(), ex);
         }
 
-        SwingUtilities.invokeLater(new Runnable() {
-            @Override
-            public void run() {
-                new AutoDriveEditor().setVisible(true);
-            }
+        SwingUtilities.invokeLater(() -> {
+            GlobalExceptionHandler globalExceptionHandler = new GlobalExceptionHandler();
+            Thread.setDefaultUncaughtExceptionHandler(globalExceptionHandler);
+            new AutoDriveEditor().setVisible(true);
         });
     }
 
     public RoadMap loadFile(String path) throws ParserConfigurationException, IOException, SAXException {
+        LOG.info("loadFile: {}", path);
+
         File fXmlFile = new File(path);
         DocumentBuilderFactory dbFactory = DocumentBuilderFactory.newInstance();
         DocumentBuilder dBuilder = dbFactory.newDocumentBuilder();
         Document doc = dBuilder.parse(fXmlFile);
         doc.getDocumentElement().normalize();
 
-        System.out.println("Root element :" + doc.getDocumentElement().getNodeName());
+        LOG.info("Root element :{}", doc.getDocumentElement().getNodeName());
 
         NodeList markerList = doc.getElementsByTagName("mapmarker");
         LinkedList<MapMarker> mapMarkers = new LinkedList<>();
@@ -229,13 +272,13 @@ public class AutoDriveEditor extends JFrame {
                 NodeList groupNodeList = eElement.getElementsByTagName("group");
 
                 for (int markerIndex = 0; markerIndex<idNodeList.getLength(); markerIndex++ ) {
-                    Node node = (Node) idNodeList.item(markerIndex).getChildNodes().item(0);
+                    Node node = idNodeList.item(markerIndex).getChildNodes().item(0);
                     String markerNodeId = node.getNodeValue();
 
-                    node = (Node) nameNodeList.item(markerIndex).getChildNodes().item(0);
+                    node = nameNodeList.item(markerIndex).getChildNodes().item(0);
                     String markerName = node.getNodeValue();
 
-                    node = (Node) groupNodeList.item(markerIndex).getChildNodes().item(0);
+                    node = groupNodeList.item(markerIndex).getChildNodes().item(0);
                     String markerGroup = node.getNodeValue();
 
                     MapNode dummyNode = new MapNode((int)Double.parseDouble(markerNodeId), 0, 0, 0);
@@ -247,45 +290,43 @@ public class AutoDriveEditor extends JFrame {
 
         NodeList nList = doc.getElementsByTagName("waypoints");
 
-        System.out.println("----------------------------");
-
         LinkedList<MapNode> nodes = new LinkedList<>();
         for (int temp = 0; temp < nList.getLength(); temp++) {
 
             Node nNode = nList.item(temp);
 
-            System.out.println("\nCurrent Element :" + nNode.getNodeName());
+            LOG.info("Current Element :{}", nNode.getNodeName());
 
             if (nNode.getNodeType() == Node.ELEMENT_NODE) {
                 Element eElement = (Element) nNode;
 
                 NodeList nodeList = eElement.getElementsByTagName("id").item(0).getChildNodes();
-                Node node = (Node) nodeList.item(0);
+                Node node = nodeList.item(0);
                 String idString = node.getNodeValue();
                 String[] ids = idString.split(",");
 
                 nodeList = eElement.getElementsByTagName("x").item(0).getChildNodes();
-                node = (Node) nodeList.item(0);
+                node = nodeList.item(0);
                 String xString = node.getNodeValue();
                 String[] xValues = xString.split(",");
 
                 nodeList = eElement.getElementsByTagName("y").item(0).getChildNodes();
-                node = (Node) nodeList.item(0);
+                node = nodeList.item(0);
                 String yString = node.getNodeValue();
                 String[] yValues = yString.split(",");
 
                 nodeList = eElement.getElementsByTagName("z").item(0).getChildNodes();
-                node = (Node) nodeList.item(0);
+                node = nodeList.item(0);
                 String zString = node.getNodeValue();
                 String[] zValues = zString.split(",");
 
                 nodeList = eElement.getElementsByTagName("out").item(0).getChildNodes();
-                node = (Node) nodeList.item(0);
+                node = nodeList.item(0);
                 String outString = node.getNodeValue();
                 String[] outValueArrays = outString.split(";");
 
                 nodeList = eElement.getElementsByTagName("incoming").item(0).getChildNodes();
-                node = (Node) nodeList.item(0);
+                node = nodeList.item(0);
                 String incomingString = node.getNodeValue();
                 String[] incomingValueArrays = incomingString.split(";");
 
@@ -294,15 +335,6 @@ public class AutoDriveEditor extends JFrame {
                     double x = Double.parseDouble(xValues[i]);
                     double y = Double.parseDouble(yValues[i]);
                     double z = Double.parseDouble(zValues[i]);
-
-                    if (isFourTimesMap && !isSixteenTimesMap) {
-                        x = (x)/2.0;
-                        z = (z)/2.0;
-                    }
-                    if (isSixteenTimesMap && !isFourTimesMap) {
-                        x = (x)/4.0;
-                        z = (z)/4.0;
-                    }
 
                     MapNode mapNode = new MapNode(id, x, y, z);
                     nodes.add(mapNode);
@@ -341,10 +373,9 @@ public class AutoDriveEditor extends JFrame {
         roadMap.mapMarkers = mapMarkers;
 
         Node ADNode = doc.getElementsByTagName("AutoDrive").item(0);
-        NodeList adNodes = ADNode.getChildNodes();
         Node mapNameNode = nList.item(0).getParentNode();
         String mapName = mapNameNode.getNodeName();
-        System.out.println("Loaded config for map: " + mapNameNode.getNodeName());
+        LOG.info("Loaded config for map: {}", mapNameNode.getNodeName());
 
         String mapPath = "/mapImages/" + mapName + ".png";
         URL url = AutoDriveEditor.class.getResource(mapPath);
@@ -365,17 +396,18 @@ public class AutoDriveEditor extends JFrame {
                         mapPath = "./" + mapName + ".png";
                         image = ImageIO.read(new File(mapPath));
                     } catch (Exception e3) {
-                        System.out.println("Editor has no map file for map: " + mapName);
+                        mapBoxSetEnabled(true);
+                        LOG.info("Editor has no map file for map: {}", mapName);
                     }
                 }
             }
         }
 
         if (image != null) {
-            mapPanel.image = image;
+            mapPanel.setImage(image);
         }
 
-        if (mapPanel.image != null) {
+        if (mapPanel.getImage() != null) {
             mapPanel.setPreferredSize(new Dimension(1024, 768));
             mapPanel.setMinimumSize(new Dimension(1024, 768));
             pack();
@@ -383,21 +415,26 @@ public class AutoDriveEditor extends JFrame {
             mapPanel.repaint();
         }
 
+        saveButton.setEnabled(true);
+        nodeBoxSetEnabled(true);
+        editorState = EDITORSTATE_MOVING;
+        updateButtons();
+
+        LOG.info("loadFile end.");
         return roadMap;
 
     }
 
     public void saveMap(String oldPath, String newPath) {
-        System.out.println("SaveMap called");
+        LOG.info("SaveMap called");
+
+        RoadMap roadMap = mapPanel.getRoadMap();
+
         try {
             String filepath = oldPath;
             File file = null;
-            try {
-                filepath = URLDecoder.decode(filepath, "UTF-8");
-                file = new File(filepath);
-            } catch(UnsupportedEncodingException e) {
-                e.printStackTrace();
-            }
+            filepath = URLDecoder.decode(filepath, StandardCharsets.UTF_8);
+            file = new File(filepath);
             DocumentBuilderFactory docFactory = DocumentBuilderFactory.newInstance();
             DocumentBuilder docBuilder = docFactory.newDocumentBuilder();
             Document doc = null;
@@ -422,10 +459,10 @@ public class AutoDriveEditor extends JFrame {
 
                 if ("id".equals(node.getNodeName())) {
                     String ids = "";
-                    for (int j=0; j<mapPanel.roadMap.mapNodes.size(); j++) {
-                        MapNode mapNode = mapPanel.roadMap.mapNodes.get(j);
+                    for (int j=0; j<roadMap.mapNodes.size(); j++) {
+                        MapNode mapNode = roadMap.mapNodes.get(j);
                         ids += mapNode.id;
-                        if (j < (mapPanel.roadMap.mapNodes.size()-1)) {
+                        if (j < (roadMap.mapNodes.size()-1)) {
                             ids = ids + ",";
                         }
                     }
@@ -433,20 +470,10 @@ public class AutoDriveEditor extends JFrame {
                 }
                 if ("x".equals(node.getNodeName())) {
                     String xPositions = "";
-                    for (int j=0; j<mapPanel.roadMap.mapNodes.size(); j++) {
-                        MapNode mapNode = mapPanel.roadMap.mapNodes.get(j);
-                        if (isFourTimesMap || isSixteenTimesMap) {
-                            if (isFourTimesMap) {
-                                xPositions += mapNode.x * 2.0;
-                            }
-                            else {
-                                xPositions += mapNode.x * 4.0;
-                            }
-                        }
-                        else {
-                            xPositions += mapNode.x;
-                        }
-                        if (j < (mapPanel.roadMap.mapNodes.size()-1)) {
+                    for (int j=0; j<roadMap.mapNodes.size(); j++) {
+                        MapNode mapNode = roadMap.mapNodes.get(j);
+                        xPositions += mapNode.x;
+                        if (j < (roadMap.mapNodes.size()-1)) {
                             xPositions = xPositions + ",";
                         }
                     }
@@ -454,10 +481,10 @@ public class AutoDriveEditor extends JFrame {
                 }
                 if ("y".equals(node.getNodeName())) {
                     String yPositions = "";
-                    for (int j=0; j<mapPanel.roadMap.mapNodes.size(); j++) {
-                        MapNode mapNode = mapPanel.roadMap.mapNodes.get(j);
+                    for (int j=0; j<roadMap.mapNodes.size(); j++) {
+                        MapNode mapNode = roadMap.mapNodes.get(j);
                         yPositions += mapNode.y;
-                        if (j < (mapPanel.roadMap.mapNodes.size()-1)) {
+                        if (j < (roadMap.mapNodes.size()-1)) {
                             yPositions = yPositions + ",";
                         }
                     }
@@ -465,15 +492,10 @@ public class AutoDriveEditor extends JFrame {
                 }
                 if ("z".equals(node.getNodeName())) {
                     String zPositions = "";
-                    for (int j=0; j<mapPanel.roadMap.mapNodes.size(); j++) {
-                        MapNode mapNode = mapPanel.roadMap.mapNodes.get(j);
-                        if (isFourTimesMap) {
-                            zPositions += mapNode.z * 2.0;
-                        }
-                        else {
-                            zPositions += mapNode.z;
-                        }
-                        if (j < (mapPanel.roadMap.mapNodes.size()-1)) {
+                    for (int j=0; j<roadMap.mapNodes.size(); j++) {
+                        MapNode mapNode = roadMap.mapNodes.get(j);
+                        zPositions += mapNode.z;
+                        if (j < (roadMap.mapNodes.size()-1)) {
                             zPositions = zPositions + ",";
                         }
                     }
@@ -481,8 +503,8 @@ public class AutoDriveEditor extends JFrame {
                 }
                 if ("incoming".equals(node.getNodeName())) {
                     String incomingString = "";
-                    for (int j=0; j<mapPanel.roadMap.mapNodes.size(); j++) {
-                        MapNode mapNode = mapPanel.roadMap.mapNodes.get(j);
+                    for (int j=0; j<roadMap.mapNodes.size(); j++) {
+                        MapNode mapNode = roadMap.mapNodes.get(j);
                         String incomingsPerNode = "";
                         for (int incomingIndex = 0; incomingIndex < mapNode.incoming.size(); incomingIndex++) {
                             MapNode incomingNode = mapNode.incoming.get(incomingIndex);
@@ -495,7 +517,7 @@ public class AutoDriveEditor extends JFrame {
                             incomingsPerNode = "-1";
                         }
                         incomingString += incomingsPerNode;
-                        if (j < (mapPanel.roadMap.mapNodes.size()-1)) {
+                        if (j < (roadMap.mapNodes.size()-1)) {
                             incomingString = incomingString + ";";
                         }
                     }
@@ -503,8 +525,8 @@ public class AutoDriveEditor extends JFrame {
                 }
                 if ("out".equals(node.getNodeName())) {
                     String outgoingString = "";
-                    for (int j=0; j<mapPanel.roadMap.mapNodes.size(); j++) {
-                        MapNode mapNode = mapPanel.roadMap.mapNodes.get(j);
+                    for (int j=0; j<roadMap.mapNodes.size(); j++) {
+                        MapNode mapNode = roadMap.mapNodes.get(j);
                         String outgoingPerNode = "";
                         for (int outgoingIndex = 0; outgoingIndex < mapNode.outgoing.size(); outgoingIndex++) {
                             MapNode outgoingNode = mapNode.outgoing.get(outgoingIndex);
@@ -517,7 +539,7 @@ public class AutoDriveEditor extends JFrame {
                             outgoingPerNode = "-1";
                         }
                         outgoingString += outgoingPerNode;
-                        if (j < (mapPanel.roadMap.mapNodes.size()-1)) {
+                        if (j < (roadMap.mapNodes.size()-1)) {
                             outgoingString = outgoingString + ";";
                         }
                     }
@@ -525,7 +547,7 @@ public class AutoDriveEditor extends JFrame {
                 }
             }
 
-            for (int markerIndex = 1; markerIndex < mapPanel.roadMap.mapMarkers.size()+100; markerIndex++) {
+            for (int markerIndex = 1; markerIndex < roadMap.mapMarkers.size()+100; markerIndex++) {
                 Element element = (Element) doc.getElementsByTagName("mm" + (markerIndex)).item(0);
                // if (element != null) {
                   //  element.getParentNode().removeChild(element);
@@ -540,7 +562,7 @@ public class AutoDriveEditor extends JFrame {
             NodeList markerList = doc.getElementsByTagName("mapmarker");
             Node markerNode = markerList.item(0);
             int mapMarkerCount = 1;
-            for (MapMarker mapMarker : mapPanel.roadMap.mapMarkers) {
+            for (MapMarker mapMarker : roadMap.mapMarkers) {
                 Element newMapMarker = doc.createElement("mm" + mapMarkerCount);
 
                 Element markerID = doc.createElement("id");
@@ -570,7 +592,7 @@ public class AutoDriveEditor extends JFrame {
                     newPathEndIndex = newPath.lastIndexOf("_init_config");
                 }
                 newMapName = newPath.substring(newPathStartIndex, newPathEndIndex);
-                System.out.println("Found new map name in: " + newPath + " : " + newMapName);
+                LOG.info("Found new map name in: {} : {}", newPath , newMapName);
             }
             doc.renameNode(mapNameNode, null, newMapName);
 
@@ -586,12 +608,23 @@ public class AutoDriveEditor extends JFrame {
             StreamResult result = new StreamResult(new File(filepath));
             transformer.transform(source, result);
         } catch (Exception e) {
-            e.printStackTrace();
+            LOG.error(e.getMessage(), e);
         }
 
-        System.out.println("Done");
+        LOG.info("Done save");
     }
 
+    public void updateMapZoomFactor(int zoomFactor) {
+        mapPanel.setMapZoomFactor(zoomFactor);
+        mapPanel.repaint();
+    }
 
+    public MapPanel getMapPanel() {
+        return mapPanel;
+    }
+
+    public void setMapPanel(MapPanel mapPanel) {
+        this.mapPanel = mapPanel;
+    }
 
 }
